# reinda

./: CHANGELOG.md  Cargo.toml  README.md  build.rs  test-all.sh
.github/workflows/: ci.yml
core/: Cargo.toml
core/src/: lib.rs  template.rs
examples/: main.rs
examples/assets/: bundle.8f29ad31.js  bundle.js  bundle.js.map  index.html  robots.txt  style.css
macros/: Cargo.toml  build.rs
macros/src/: ast.rs  emit.rs  err.rs  lib.rs  parse.rs
reinda-core/: Cargo.toml
reinda-core/src/: lib.rs  template.rs
reinda-macros/: Cargo.toml
reinda-macros/src/: lib.rs  parse.rs
src/: builder.rs  dep_graph.rs  embed.rs  hash.rs  imp_dev.rs  imp_prod.rs  include_graph.rs  lib.rs  resolve.rs  util.rs
tests/: main.rs
tests/files/: include_sub.txt  peter.txt
tests/files/complex_includes/: a.txt  b.txt  c.txt  root.txt
tests/files/cyclic_include/: a.txt  b.txt  c.txt
tests/files/sub/: anna.txt
tests/files/use_case_web/: bundle.js  bundle.js.map  fonts.css  index.html
