[package]
name = "reinda"
version = "0.1.0"
authors = ["Lukas Kalbertodt <lukas.kalbertodt@gmail.com>"]
edition = "2018"

description = """
Easily embed and manage your assets for your web application to build
standalone-executables. Offers filename hashing, templating and more.
"""
documentation = "https://docs.rs/reinda/"
repository = "https://github.com/LukasKalbertodt/reinda/"
readme = "README.md"
license = "MIT/Apache-2.0"

keywords = ["embed", "asset", "standalone", "http", "web"]
categories = ["caching", "filesystem", "web-programming"]
exclude = [".github"]


[features]
default = ["hash"]
debug_is_prod = ["reinda-core/debug_is_prod", "reinda-macros/debug_is_prod"]
hash = ["base64", "sha2", "reinda-macros/hash"]

[dependencies]
ahash = "0.6"
base64 = { version = "0.13", optional = true }
bytes = "1"
reinda-core = { version = "=0.0.1", path = "core" }
reinda-macros = { version = "=0.0.1", path = "macros" }
sha2 = { version = "0.9", optional = true }
thiserror = "1"
tokio = { version = "1", features = ["fs", "io-util"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }


[[example]]
name = "main"
required-features = ["hash"]
