[package]
name = "reinda"
version = "0.2.0"
authors = ["Lukas Kalbertodt <lukas.kalbertodt@gmail.com>"]
edition = "2018"

description = """
Easily embed and manage your assets for your web application to build
standalone-executables. Offers filename hashing, templating, compression and more.
"""
documentation = "https://docs.rs/reinda/"
repository = "https://github.com/LukasKalbertodt/reinda/"
readme = "README.md"
license = "MIT/Apache-2.0"

keywords = ["embed", "asset", "standalone", "http", "web"]
categories = ["caching", "filesystem", "web-programming"]
exclude = [".github"]


[features]
default = ["compress", "hash"]
debug-is-prod = ["reinda-core/debug-is-prod", "reinda-macros/debug-is-prod"]
hash = ["base64", "sha2", "reinda-macros/hash"]
compress = ["flate2", "reinda-macros/compress"]

[dependencies]
ahash = "0.8.3"
base64 = { version = "0.13", optional = true }
bytes = "1"
flate2 = { version = "1", optional = true }
reinda-core = { version = "=0.0.2", path = "core" }
reinda-macros = { version = "=0.0.2", path = "macros" }
sha2 = { version = "0.10.6", optional = true }
thiserror = "1"
tokio = { version = "1", features = ["fs", "io-util"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }


[[example]]
name = "main"
required-features = ["hash"]
