[package]
name = "reinda"
version = "0.3.0"
authors = ["Lukas Kalbertodt <lukas.kalbertodt@gmail.com>"]
edition = "2018"

description = """
Easily embed and manage your assets for your web application to build
standalone-executables. Offers filename hashing, templating, compression and more.
"""
documentation = "https://docs.rs/reinda/"
repository = "https://github.com/LukasKalbertodt/reinda/"
readme = "README.md"
license = "MIT/Apache-2.0"

keywords = ["embed", "asset", "standalone", "http", "web"]
categories = ["caching", "filesystem", "web-programming"]
exclude = [".github"]


[features]
default = ["compress", "hash"]
always-prod = ["reinda-macros/always-prod"]
hash = ["dep:base64", "dep:sha2"]
compress = ["dep:brotli", "reinda-macros/compress"]

[dependencies]
ahash = "0.8.3"
aho-corasick = "1.1"
base64 = { version = "0.22.0", optional = true }
brotli = { version = "5", optional = true }
bytes = "1"
glob = "0.3.1"
reinda-macros = { version = "=0.0.4", path = "macros" }
sha2 = { version = "0.10.6", optional = true }
thiserror = "1"
tokio = { version = "1", features = ["fs", "io-util"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }

[build-dependencies]
cfg_aliases = "0.2.0"

[[example]]
name = "main"
required-features = ["hash"]
