[package]
name = "reinda-core"
version = "0.0.2"
authors = ["Lukas Kalbertodt <lukas.kalbertodt@gmail.com>"]
edition = "2018"

description = """
Internal crate for `reinda`. Do not use this crate directly! See the main
crate for more information.
"""
repository = "https://github.com/LukasKalbertodt/reinda/"
license = "MIT/Apache-2.0"


[features]
debug-is-prod = []

[dependencies]
bytes = "1"
thiserror = "1"
twoway = "0.2.1"
