[package]
name = "reinda-macros"
version = "0.0.1"
authors = ["Lukas Kalbertodt <lukas.kalbertodt@gmail.com>"]
edition = "2018"

description = """
Internal crate for `reinda`. Do not use this crate directly! See the main
crate for more information.
"""
repository = "https://github.com/LukasKalbertodt/reinda/"
license = "MIT/Apache-2.0"


[lib]
proc-macro = true


[dependencies]
reinda-core = { version = "=0.0.1", path = "../core" }
proc-macro2 = "1"
quote = "1"

[dependencies.syn]
version = "1"
default-features = false
features = ["parsing", "proc-macro", "derive", "printing"]
