[package]
name = "reinda-macros"
version = "0.0.3"
authors = ["Lukas Kalbertodt <lukas.kalbertodt@gmail.com>"]
edition = "2018"

description = """
Internal crate for `reinda`. Do not use this crate directly! See the main
crate for more information.
"""
repository = "https://github.com/LukasKalbertodt/reinda/"
license = "MIT/Apache-2.0"


[lib]
proc-macro = true

[features]
always-embed = []
compress = ["dep:brotli"]

[dependencies]
brotli = { version = "5", optional = true }
glob = "0.3.1"
proc-macro2 = "1"
quote = "1"
litrs = "0.4.1"
